--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.16",
-    "redux-logger": "^3.0.6"
+    "mongoose": "^5.3.16"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.8"
+    "nodemon": "^1.18.8",
+    "redux-logger": "^3.0.6"
   }
 }
